--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>holler!</h1>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset="utf-8">
+    <title>Will Sklenars Portfolio</title>
+    <!-- <link rel="stylesheet" href="CSS/normalize.css"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300/" rel='stylesheet' type='text/css'> -->
+  </head>
+  <body>
+    <header>
+      <h1>Will Sklenars Portfolio</h1>
+    </header>
+    <div id="wrapper">
+      <section>
+
+      </section>
+      <footer>
+        <a href="https://twitter.com/WIllSklenars">
+          <img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon">
+        </a>
+        <a href="https://www.facebook.com/will.sklenars">
+          <img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
+        </a>
+        <p>&copy; 2k15 Juan Claud Van Crab ltd</p>
+      </footer>
+    </div>
+  </body>
+
+</html>
