--- a/index.html
+++ b/index.html
@@ -1,30 +1,84 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Will Sklenars Portfolio</title>
-    <!-- <link rel="stylesheet" href="CSS/normalize.css"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300/" rel='stylesheet' type='text/css'> -->
-  </head>
-  <body>
-    <header>
-      <h1>Will Sklenars Portfolio</h1>
-    </header>
-    <div id="wrapper">
-      <section>
 
-      </section>
-      <footer>
-        <a href="https://twitter.com/WIllSklenars">
-          <img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon">
-        </a>
-        <a href="https://www.facebook.com/will.sklenars">
-          <img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
-        </a>
-        <p>&copy; 2k15 Juan Claud Van Crab ltd</p>
-      </footer>
-    </div>
-  </body>
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Will Sklenars</title>
+
+  <meta name="viewport" content="width=480, maximum-scale=1.0, user-scalable=yes">
+  <meta name="keywords" content="A multidisciplinary designer/developer">
+  <meta name="description" content="Professional problem solver, learner, artist. Full stack developer based in Wellington NZ with a passion for interactive design and 3d graphics.">
+
+  <style type="text/css">
+      body{ font-family:"Helvitica", Arial; font-size:16px; color:#222; margin:50px; }
+      a { font-size:14px; color:#444; text-decoration: underline; display: inline-block; margin-right:6px; line-height:20px; }
+  </style>
+</head>
+<body>
+
+  <div style="width:56%; min-width:290px;">
+      Will Sklenars<br><br>
+      professional problem solver, learner, artist.<br>
+      Full stack developer based in Wellington NZ with a passion for interactive design and 3d graphics.<br><br><br>
+
+      -<br><br>
+
+
+      Web Art<br>-<br>
+      <a href="http://enspiral-cherubi.github.io/dREAM-cACHER_interface_1.0/" target="_blank">dream-cacher</a>, interface 1.0<br>
+      <a href="http://will-sklenars.github.io/marmite/" target="_blank">marmite</a><br>
+      <a href="https://gramcloud-simulatr.herokuapp.com/" target="_blank">gramcloud simulatr</a> (nsfw)
+      <br><br><br>
+
+      Rails/Sinatra<br>-<br>
+      <a href="http://tipjarwellington.herokuapp.com/" target="_blank">tipjar</a><br>
+
+      <br><br>
+
+      Film<br>-<br>
+      orchestra of spheres | <a href="https://www.youtube.com/watch?v=Z4IVJgFVqbQ/" target="_blank">fingerweg</a> | direction, camera, editing<br>
+      orchestra of spheres | <a href="" target="_blank">2,000,000 years</a> | set design/building<br>
+      thought creature | <a href="https://www.youtube.com/watch?v=nnh5EjPhfBU" target="_blank">smoke machine</a> | camera, pyrotechnics<br>
+
+
+
+      <br><br>
+
+      Music<br>-<br>
+      amanda palmer | <a href="https://youtu.be/h5GZtgEICOI" target="_blank">garrett st warehouse party</a> | double bass<br>
+      blh plya gna | <a href="https://www.youtube.com/watch?v=QK1kWycBYV0" target="_blank">i must love you</a> | double bass, ableton<br>
+      will and reece | <a href="https://www.youtube.com/watch?v=-OTGYDp7vsM" target="_blank">tall pop</a> | double bass, ableton, video<br>
+      <a href="http://mychameleon.bandcamp.com/" target="_blank">my chameleon</a> | double bass<br>
+      <br><br>
+
+      Skillset<br>-<br>
+      rails<br>
+      ruby<br>
+      sinatra<br>
+      react.js<br>
+      three.js<br>
+      ableton live<br>
+      final cut pro<br>
+      DLSR opperation<br>
+      event curation and promotion<br>
+      <br><br>
+
+      Connection<br>-<br>
+      <a href="https://github.com/will-sklenars" target="_blank">github</a>
+      <a href="https://www.facebook.com/will.sklenars" target="_blank">facebook</a>
+      <a href="https://instagram.com/will_sklenars/" target="_blank">instagram</a>
+      <a href="https://twitter.com/WIllSklenars" target="_blank">twitter</a>
+
+      <br><br>
+      -<br>
+      <div>will(~dot~)sklenars(~at~)gmail(~dot~)com</div>
+      <br><br><br><br>
+      <br><br><br><br>
+
+  </div>
+
+
+
+</body>
 
 </html>
