--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div style="width:56%; min-width:290px;">
       Will Sklenars<br><br>
       professional problem solver, learner, artist.<br>
-      Full stack developer based in Wellington NZ with a passion for interactive design and 3d graphics.<br><br><br><br>
+      full stack developer based in wellington nz, with<br> a passion for interactive design and 3d graphics.<br><br><br><br>
 
       -<br><br>
 
