--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 
       Web Art<br>-<br>
-      <a href="http://enspiral-cherubi.github.io/dREAM-cACHER_interface_1.0/" target="_blank">dream-cacher</a>, interface 1.0<br>
+      <a href="http://enspiral-cherubi.github.io/dREAM-cACHER_interface_1.0/" target="_blank">dream-cacher</a> | interface 1.0<br>
       <a href="http://will-sklenars.github.io/marmite/" target="_blank">marmite</a><br>
-      <a href="https://gramcloud-simulatr.herokuapp.com/" target="_blank">gramcloud simulatr</a> (nsfw)
+      <a href="https://gramcloud-simulatr.herokuapp.com/" target="_blank">gramcloud simulatr</a> | (nsfw)
       <br><br><br>
 
       Rails/Sinatra<br>-<br>
