--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       three.js<br>
       ableton live<br>
       final cut pro<br>
-      DLSR opperation<br>
+      DSLR operation<br>
       event curation and promotion<br>
       <br><br>
 
