--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 
       Web Art<br>-<br>
+      <a href="http://will-sklenars.github.io/uhhhhhh/" target="_blank">uhhhhhh</a> | audiovisual experement<br>
       <a href="http://enspiral-cherubi.github.io/dREAM-cACHER_interface_1.0/" target="_blank">dream-cacher</a> | interface 1.0<br>
       <a href="http://will-sklenars.github.io/marmite/" target="_blank">marmite</a><br>
       <a href="http://will-sklenars.github.io/dRONE-pARTY/" target="_blank">drone-party</a><br>
