added ember.js to skillstack

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       ruby<br>
       sinatra<br>
       react.js<br>
+      ember.js<br>
       three.js<br>
       ableton live<br>
       final cut pro<br>
