added ember data and rails 5

--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
       <br><br>
 
       Skillset<br>-<br>
-      rails<br>
-      ruby<br>
+      rails 5<br>
+      JSON API<br>
       sinatra<br>
       react.js<br>
-      ember.js<br>
       three.js<br>
+      ember.js<br>
+      ember-data<br>
       ableton live<br>
       final cut pro<br>
       DSLR operation<br>
