added dj mixes and waka flocka

--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
       orchestra of spheres | <a href="https://www.youtube.com/watch?v=LVSqP8IRWQQ" target="_blank">2,000,000 years</a> | set design/building<br>
       thought creature | <a href="https://www.youtube.com/watch?v=nnh5EjPhfBU" target="_blank">smoke machine</a> | camera, pyrotechnics<br>
 
+      <br><br>
 
+      AudioVisual<br>-<br>
+      waka flocka flame video remix | <a href="https://www.youtube.com/watch?v=mMVStKMWiJE" target="_blank">waka flocka goes in the booth</a> | music production, video editing<br>
+
+      <!-- add in flocka video -->
+      <!-- add in camelt1nes -->
+      <!-- add in mixes -->
 
       <br><br>
 
@@ -51,6 +58,11 @@
       blh plya gna | <a href="https://www.youtube.com/watch?v=QK1kWycBYV0" target="_blank">i must love you</a> | double bass, ableton<br>
       will and reece | <a href="https://www.youtube.com/watch?v=-OTGYDp7vsM" target="_blank">tall pop</a> | double bass, ableton, video<br>
       <a href="http://mychameleon.bandcamp.com/" target="_blank">my chameleon</a> | double bass<br>
+      <br><br>
+
+      DJ Sets<br>-<br>
+      <a href="https://www.mixcloud.com/will-sklenars/will-sklenars-kiwiburn-2016/" target="_blank">Kiwiburn 2016</a><br>
+      <a href="https://www.mixcloud.com/will-sklenars/free-lance-to-berlin-garrett-st-party/" target="_blank">free lance to berlin</a> | garrett st warehouse party<br>
       <br><br>
 
       Skillset<br>-<br>
