--- a/index.html
+++ b/index.html
@@ -19,24 +19,19 @@
   <div style="width:56%; min-width:290px;">
       Will Sklenars<br><br>
       professional problem solver, learner, artist.<br>
-      full stack developer based in wellington nz, with<br> a passion for interactive design and 3d graphics.<br><br><br><br>
+      full stack developer based in wellington nz.<br>
+      interactive and 3d focus.<br><br><br><br>
 
       -<br><br>
 
 
       Web Art<br>-<br>
-      <a href="http://dream-cacher.is/" target="_blank">dream-cacher</a> | 3d dream diary | three.js rails<br>
+      <a href="http://enspiral-cherubi.github.io/dream-cacher-ui/" target="_blank">dream-cacher</a> | 3d dream diary | three.js rails<br>
       <a href="http://will-sklenars.github.io/uhhhhhh/" target="_blank">uhhhhhh</a> | audiovisual experement<br>
-      <a href="http://enspiral-cherubi.github.io/dREAM-cACHER_interface_1.0/" target="_blank">dream-cacher</a> | interface 1.0<br>
       <a href="http://will-sklenars.github.io/marmite/" target="_blank">marmite</a><br>
       <a href="http://will-sklenars.github.io/dRONE-pARTY/" target="_blank">drone-party</a><br>
-      <a href="https://gramcloud-simulatr.herokuapp.com/" target="_blank">gramcloud simulatr</a> | (nsfw)
+      <!-- <a href="https://gramcloud-simulatr.herokuapp.com/" target="_blank">gramcloud simulatr</a> | (nsfw) -->
       <br><br><br>
-
-      Rails/Sinatra<br>-<br>
-      <a href="http://tipjarwellington.herokuapp.com/" target="_blank">tipjar</a><br>
-
-      <br><br>
 
       Film<br>-<br>
       orchestra of spheres | <a href="https://www.youtube.com/watch?v=Z4IVJgFVqbQ/" target="_blank">fingerweg</a> | direction, camera, editing<br>
@@ -58,18 +53,20 @@
       <br><br>
 
       DJ Sets<br>-<br>
+      <a href="https://www.mixcloud.com/will-sklenars/snugfreaks/" target="_blank">Boat Party</a><br>
       <a href="https://www.mixcloud.com/will-sklenars/will-sklenars-kiwiburn-2016/" target="_blank">Kiwiburn 2016</a><br>
-      <a href="https://www.mixcloud.com/will-sklenars/free-lance-to-berlin-garrett-st-party/" target="_blank">free lance to berlin</a> | garrett st warehouse party<br>
+      <!-- <a href="https://www.mixcloud.com/will-sklenars/free-lance-to-berlin-garrett-st-party/" target="_blank">free lance to berlin</a> | garrett st warehouse party<br> -->
       <br><br>
 
       Skillset<br>-<br>
-      rails 5<br>
-      sinatra<br>
+      rails<br>
+      <!-- sinatra<br> -->
+      cycle.js<br>
       react.js<br>
       three.js<br>
       ember.js<br>
-      ember-data<br>
-      JSON API<br>
+      <!-- ember-data<br> -->
+      <!-- JSON API<br> -->
       ableton live<br>
       final cut pro<br>
       DSLR operation<br>
