--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div style="width:56%; min-width:290px;">
       Will Sklenars<br><br>
       professional problem solver, learner, artist.<br>
-      full stack developer based in wellington nz.<br>
-      interactive and 3d focus.<br><br><br><br>
+      full stack developer based in wellington nz,<br>
+      with a focus on interactive 3d web experiences.<br><br><br><br>
 
       -<br><br>
 
